minor scss adjustment

--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,9 +1,10 @@
-// -------------------------------------------
+/* -------------------------------------------
 // COMPONENTS IMPORTS
-// -------------------------------------------
-// @import "extended",
+------------------------------------------- */
+@import "extended",
         // "typography",
         // "nav",
-        // "form",
+        "form"
         // "image",
-        // "button";
+        // "button",
+;
