--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -1,6 +1,6 @@
-// -------------------------------------------
+/* -------------------------------------------
 // BASE IMPORTS
-// -------------------------------------------
+------------------------------------------- */
 
 
 @import "base";
