--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,5 +1,5 @@
-// -------------------------------------------
+/* -------------------------------------------
 // LAYOUT IMPORTS
-// -------------------------------------------
+------------------------------------------- */
 @import "layout",
         "grid";
