--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -7,7 +7,7 @@
         @include flexy;
     };
     &__item a {
-        @extend %btn-round-box;
+        @extend %round-box;
         display: block;
         color: $black;
         text-align: center;
