update @mixin center-container with new paramenter $max for max width settings

--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,8 +1,9 @@
 // -------------------------------------------
 // Mixins
 // -------------------------------------------
-@mixin center-container($percent: 90%) {
+@mixin center-container($percent: 90%, $max: null) {
     width: $percent;
+    max-width: $max;
     margin: 0 auto;
     @content;
 };
