--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -10,13 +10,14 @@
 
     &__input {
         @extend %round-box;
-        width: 100%;
-        border-bottom: 0.5em solid $color-primary;
+        display: block;
+        width: 30%;
+        margin: 2em auto;
         padding-left: 1em;
         padding-right: 1em;
 
         &::placeholder {
-            font-size: 0.8em;
+            font-size: $base__font-size;
             font-style: oblique;
         }
     }
