center page to 1024px width

--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -1,3 +1,7 @@
 // ========================================
 // LAYOUT
 // ========================================
+.container {
+    @include center-container($max: 1024px) ;
+}
+
