--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,56 @@
+/* -------------------------------------------
+// BASE IMPORTS
+------------------------------------------- */
 * {
   box-sizing: border-box;
   font-family: Helvetica, Verdana, sans-serif;
   font-size: 16px;
   line-height: 1.5;
+}
+
+/* -------------------------------------------
+// LAYOUT IMPORTS
+------------------------------------------- */
+.container {
+  width: 90%;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+.img {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.img img {
+  margin: 1.75em;
+}
+
+/* -------------------------------------------
+// COMPONENTS IMPORTS
+------------------------------------------- */
+.form__input {
+  padding: 1em;
+  margin-bottom: 1em;
+  border: 2px #C0C0C0 solid;
+  border-radius: 10px;
+}
+
+.form__label--hidden {
+  display: none;
+}
+.form__input {
+  display: block;
+  width: 30%;
+  margin: 2em auto;
+  padding-left: 1em;
+  padding-right: 1em;
+}
+.form__input::placeholder {
+  font-size: 16px;
+  font-style: oblique;
 }
 
 /*# sourceMappingURL=styles.css.map */
