rename in layout.scss, using class name instead of element name

--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -8,7 +8,7 @@
 .img {
     @include flexy($justify: space-between);
 
-    & img { // TODO: need to change to class name
+    &__photo { 
         margin: em(28px)
     }
 }
