add min-width to div.container

--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -3,6 +3,7 @@
 // ========================================
 .container {
     @include center-container($max: 1024px) ;
+    min-width: 360px;
 }
 
 .img {
