--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -26,12 +26,12 @@
         }
     } @else
     if $break == 'middle' {
-        @media only screen and (min-width: map-get($breakpoints, small) + 1px) {
+        @media only screen and (min-width: map-get($breakpoints, small)) {
             @content;
         }
     } @else
     if $break == 'big' {
-        @media only screen and (min-width: map-get($breakpoints, middle) + 1px) {
+        @media only screen and (min-width: map-get($breakpoints, middle)) {
             @content;
         }
     } @else {
