--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -11,10 +11,13 @@
     &__input {
         @extend %round-box;
         display: block;
-        width: 50%;
+        width: 100%;
         margin: 2em auto;
         padding-left: 1em;
         padding-right: 1em;
+        @include mq(middle) {
+            width: 50%;
+        };
 
         &::placeholder {
             font-size: $base__font-size;
