--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
   width: 90%;
   max-width: 1024px;
   margin: 0 auto;
+  min-width: 300px;
 }
 
 .img {
@@ -25,7 +26,18 @@
   align-items: center;
 }
 .img__photo {
-  margin: 1.75em;
+  margin: 0.1875em;
+  width: 9.75em;
+}
+@media only screen and (min-width: 768px) {
+  .img__photo {
+    margin: 0.875em;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .img__photo {
+    margin: 1.75em;
+  }
 }
 
 /* -------------------------------------------
@@ -43,10 +55,15 @@
 }
 .form__input {
   display: block;
-  width: 30%;
+  width: 100%;
   margin: 2em auto;
   padding-left: 1em;
   padding-right: 1em;
+}
+@media only screen and (min-width: 768px) {
+  .form__input {
+    width: 50%;
+  }
 }
 .form__input::placeholder {
   font-size: 16px;
